@@ -12,7 +12,7 @@ arch=('i686' 'x86_64')
 url="http://www.afterstep.org"
 license=('GPL')
 depends=('gtk2>=2.18.6' 'libpng' 'libtiff' 'readline' 'freetype2' 'dbus-core' 'librsvg')
-makedepends=('pkgconfig' 'libxt')
+makedepends=('libxt')
 options=('!emptydirs')
 changelog=ChangeLog
 source=(ftp://ftp.afterstep.org/stable/${_name}-${pkgver}.tar.bz2)
