@@ -2,10 +2,10 @@
 # Contributor: Jakub Schmidtke <sjakub-at-gmail-dot-com>
 
 pkgname=android-studio
-pkgver=0.1.3
+pkgver=0.1.5
 pkgrel=1
 _build=130.687321
-_patch=130.700763
+_patch=130.709792
 pkgdesc="A new Android development environment based on IntelliJ IDEA."
 arch=(i686 x86_64)
 url="http://developer.android.com/sdk/installing/studio.html"
@@ -20,7 +20,7 @@ source=(http://dl.google.com/android/studio/android-studio-bundle-${_build}-linu
         ${pkgname}.desktop)
 noextract=(AI-${_build}-${_patch}-patch-unix.jar)
 md5sums=('6796d66de07c85b2822ca8d501a043c0'
-         'c3cc5c62853068034b0d64b822833a23'
+         '8095855400e72b2e7598b192b3a06a52'
          '0f77280fd3769b0e04ff60dad547ce5e')
 
 [ $CARCH = "x86_64" ] && depends=('python' 'lib32-fontconfig' 'lib32-mesa' 'lib32-libxrender' 'android-sdk')
