@@ -1,0 +1,47 @@
+# Maintainer: jhonnnyboy <jhonnyboy@ymail.com>
+pkgname=freestroke-git
+_pkgname=FreeStroke
+pkgver=0.0.0
+pkgrel=1
+pkgdesc="a motion-control software. Let you control your computer with body-gesture. As today the only supported capture device is MS kinect (require a windows computer on your network)"
+url='https://github.com/FreeStroke/FreeStroke.git'
+arch=('i686 x86_64')
+license=('GPLv3')
+#if test "$CARCH" == x86_64; then
+#    depends=('lib32-qt4' 'lib32-sqlite' 'lib32-glu' 'lib32-mesa-libgl' )
+#  else
+    depends=('sqlite' 'glu' 'mesa-libgl' 'qt5-base' 'qt5-xmlpatterns' 'qt5-multimedia' 'qt5-graphicaleffects' 'qt5-imageformats')
+#  fi
+makedepends=('git')
+conflicts=()
+replaces=()
+backup=()
+source=('git://github.com/FreeStroke/FreeStroke.git')
+md5sums=('SKIP')
+pkgver() {
+	cd local_repo
+  echo $(git rev-list --count HEAD).$(git rev-parse --short HEAD)
+}
+
+ build() {
+      cd "${_pkgname}/FreeStroke/project/linux/"
+      qmake
+      make -j3
+      mv FreeStroke ../apps/installerLinux/
+      cd ../apps/installerLinux/
+      sed -i -e "s|Exec=/opt/FreeSoft/FreeStroke|Exec=FreeStroke|g" ${_pkgname}.desktop
+      sed -i -e "s|Icon=/opt/FreeSoft/FreeStroke-icon|Icon=FreeStroke.png|g" ${_pkgname}.desktop
+    }
+
+    package() {
+      cd ${srcdir}/${_pkgname}/FreeStroke/project/apps/installerLinux/
+      mkdir -p ${pkgdir}/usr/bin
+      mkdir -p ${pkgdir}/usr/share/applications/
+      mkdir -p ${pkgdir}/usr/share/pixmaps/
+
+      install -m 777 ${_pkgname}  ${pkgdir}/usr/bin/${_pkgname}
+      install -m 644 ${_pkgname}.desktop ${pkgdir}/usr/share/applications/
+      install -m 644 ${_pkgname}-icon ${pkgdir}/usr/share/pixmaps/${_pkgname}.png
+    }
+
+# vim:set ts=2 sw=2 et:
