@@ -1,7 +1,7 @@
 # Contributor: Tibor Bamhor <tiborb95 at gmail.com>
 
 pkgname=gimp-plugin-aumask
-pkgver=0.9.1
+pkgver=0.9.2
 pkgrel=1
 pkgdesc="Advanced unsharp mask - sharpening tool. Normal and selective blur mask. Sharpness equalizer and more." 
 url="http://code.google.com/p/aumask/"
@@ -34,5 +34,5 @@ package() {
 	
 }
 
-sha1sums=('04e63ae402ba9b4333a9b6557b6af3fb786e9942') 
+sha1sums=('667916816ea10d5cf1c4204af6737cfcd42646f4') 
 
