@@ -1,6 +1,5 @@
 # Mantainer: Diego
-# Contributor: Alessio Sergi
-# Contributor: fauno
+# Contributor: Aleessio Sergi
 
 pkgname=gtk-theme-numix
 _theme=Numix
@@ -12,12 +11,9 @@ url="http://satya164.deviantart.com/art/Numix-GTK3-theme-360223962"
 license=('GPL3')
 depends=('gtk-engine-murrine')
 source=(https://github.com/shimmerproject/${_theme}/archive/v${pkgver}.tar.gz)
-md5sums=('2392d47faeed189b92a3c31a0253220e')
 
 package() {
   install -d "$pkgdir/usr/share/themes/${_theme}"
   cp -rv ${srcdir}/${_theme}-${pkgver}/* "$pkgdir/usr/share/themes/${_theme}/"
 }
-
-
-
+md5sums=('2392d47faeed189b92a3c31a0253220e')
