@@ -5,22 +5,23 @@
 
 pkgname=libqglviewer
 _pkgname=libQGLViewer
-pkgver=2.3.17
-pkgrel=3
+pkgver=2.4.0
+pkgrel=1
 pkgdesc="C++ library based on Qt that eases the creation of OpenGL 3D viewers"
 url="http://www.libqglviewer.com/"
 depends=('patch' 'qt4' 'glu' 'mesa')
 arch=('i686' 'x86_64')
 license=('GPL2' 'GPL3' 'custom')
-source=("http://www.libqglviewer.com/src/${_pkgname}-${pkgver}.tar.gz" )
-md5sums=('f565ce9fa424c5f51e222dc2712ca42e')
+#source=("http://www.libqglviewer.com/src/${_pkgname}-${pkgver}.tar.gz" )
+source=("https://github.com/GillesDebunne/libQGLViewer/archive/master.zip")
+md5sums=('df0e4916a3ca52e182105f11c349678f')
 options=(!makeflags)
 
 build()
 {
-  cd ${_pkgname}-$pkgver
+  cd ${_pkgname}-master
   
-  qmake-qt4 -o Makefile ${_pkgname}-${pkgver}.pro || return 1
+  qmake-qt4 -o Makefile ${_pkgname}.pro || return 1
   
   make \
     CFLAGS="-pipe ${CFLAGS} -D_REENTRANT -Wall -W -fPIC \$(DEFINES)" \
@@ -32,7 +33,7 @@ build()
 
 package()
 {
-  cd ${_pkgname}-$pkgver
+  cd ${_pkgname}-master
 
   make install INSTALL_ROOT="$pkgdir" || return 1
   
