@@ -1,9 +1,11 @@
+# Maintainer: Alexandre Dantas <alex.dantas92@gmail.com>
 # Contributor: Changaco <me@changaco.net>
+
 pkgname=mbrola-voices-br2
 pkgver=000119
-pkgrel=1
+pkgrel=2
 pkgdesc="A brazilian portuguese male voice for mbrola."
-arch=(i686)
+arch=('any')
 url="http://tcts.fpms.ac.be/synthesis/mbrola.html"
 groups=(mbrola-voices-br)
 depends=(mbrola)
@@ -11,12 +13,12 @@ license=(custom)
 source=(http://tcts.fpms.ac.be/synthesis/mbrola/dba/br2/br2-$pkgver.zip)
 md5sums=('7235536b1dd7470fed9b226464229ef5')
 
-build(){
+package() {
   cd $srcdir
-  mkdir -p $pkgdir/usr/share/licenses/$pkgname/
+  install -d $pkgdir/usr/share/licenses/$pkgname/
   cd br2
-  mv license.txt $pkgdir/usr/share/licenses/$pkgname/LICENSE
-  mkdir -p $pkgdir/usr/share/mbrola/br2/
-  cp br2 $pkgdir/usr/share/mbrola/br2/
+  install license.txt $pkgdir/usr/share/licenses/$pkgname/LICENSE
+  install -d $pkgdir/usr/share/mbrola/br2/
+  install br2 $pkgdir/usr/share/mbrola/br2/
   cp -r TEST $pkgdir/usr/share/mbrola/br2/
 }
