@@ -2,7 +2,7 @@
 # Contributor: Patrick McCarty <pnorcks at gmail dot com>
 
 pkgname=tup-git
-pkgver=0.6.354.g7b3168c
+pkgver=0.6.5
 pkgrel=1
 pkgdesc="A fast, file-based build system"
 arch=('i686' 'x86_64')
