@@ -1,19 +1,20 @@
 # Maintainer: Frederik "Freso" S. Olesen <freso.dk@gmail.com>
-# Contributor: Juan Diego Tascón
+# Contributor: Stefan Lohmaier <noneuss@gmail.com>
+# Contributor (since 9 jun 2010): Juan Diego Tascon
 
-_gitname='seom'
+_gitname=yukon
 pkgname=$_gitname-git
-pkgver=201.b30306d
-pkgrel=2
-pkgdesc="Helper library for yukon, a screencapture solution for gaming."
+pkgver=159.988a002
+pkgrel=1
+pkgdesc='A screencapture solution for gaming.'
 arch=(i686 x86_64)
 license=('GPL')
-url='https://github.com/wereHamster/seom/wiki'
-depends=('libgl' 'libx11')
+url='https://github.com/wereHamster/yukon/wiki'
+depends=('libgl' 'libx11' 'seom-git')
 makedepends=('git' 'yasm')
-conflicts=('seom')
-provides=('seom' 'seom-svn')
-replaces=('seom-svn')
+conflicts=('yukon')
+provides=('yukon')
+replaces=('yukon-svn')
 source=("$_gitname::git+https://github.com/wereHamster/$_gitname.git")
 md5sums=('SKIP')
 
@@ -25,13 +26,15 @@ pkgver() {
 build() {
   cd "$_gitname"
 
-  ./configure --prefix="/usr"
+  ./configure --prefix='/usr'
   make
 }
 
 package() {
   cd "$_gitname"
+
   make DESTDIR="$pkgdir" install
+  install -D sysconf "$pkgdir/etc/yukon/system/sysconf"
 }
 
 # vim:syntax=sh
