@@ -3,6 +3,7 @@
 	* 2.2.12-1 :
 
 	New release (no need for libpng patch anymore but doesn't yet like x86_64, maintain of the param -j1 for the make).
+	Removed the makedepends to pkg-config (member of base-devel)
 
 	* 2.2.11-5 :
 
